hphp/hack/test/typecheck/function_pointer/class_const_dollar_dollar_bad2.php.exp
File "class_const_dollar_dollar_bad2.php", line 11, characters 22-30:
Function pointers `<>` can only be created with toplevel functions and explicitly named static methods. Use lambdas `(...) ==> {...}` for other cases. (Parsing[1002])
